--- a/tests/test.yml
+++ b/tests/test.yml
@@ -2,9 +2,8 @@
 
 - hosts: all
   sudo: true
-  fubarhouse_user: root
   vars:
-    ansible_ssh_user: travis
+    ansible_ssh_user: root
     python_version: 2.7.11
     python_versions:
     - 3.5.2
