add another debug task
Signed-off-by: Karl Hepworth <karl.hepworth@gmail.com>

--- a/tasks/pyenv.yml
+++ b/tasks/pyenv.yml
@@ -37,6 +37,11 @@
     msg: "{{ fubarhouse_python_pyenv_installed }}"
   failed_when: false
 
+- name: "PyEnv Debug 2!"
+  debug:
+    msg: "{{ fubarhouse_python.main_dir }}"
+  failed_when: false
+
 - name: "PyEnv | Check directory permissions"
   become: yes
   become_user: "root"
