add debug tasks
Signed-off-by: Karl Hepworth <karl.hepworth@gmail.com>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,14 +2,14 @@
 # file: roles/fubarhouse.python/tasks/main.yml
 
 - name: "Define user variable for ssh use"
-  set_fact:
-    fubarhouse_user: "{{ ansible_ssh_user }}"
-  when: ansible_ssh_user is defined and fubarhouse_user is undefined
+  debug:
+    msg: "{{ ansible_ssh_user }}"
+  when: ansible_ssh_user is defined
 
 - name: "Define user variable for non-ssh use"
-  set_fact:
-    fubarhouse_user: "{{ ansible_user_id }}"
-  when: ansible_ssh_user is not defined and fubarhouse_user is undefined
+  debug:
+    msg: "{{ ansible_user_id }}"
+  when: ansible_ssh_user is not defined
 
 - name: "Define OS-specific variables"
   include_vars: "config-{{ ansible_os_family }}.yml"
