--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -1,6 +1,11 @@
 ---
 # file: roles/fubarhouse.python/tasks/python.yml
 
+- name: "Python | Run PyEnv / Debug task"
+  become: yes
+  become_user: "{{ fubarhouse_user }}"
+  shell: "{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }}"
+
 - name: "Python | Check python versions"
   become: yes
   become_user: "{{ fubarhouse_user }}"
