begin debugging shell profiles under recommendation from yuu - maintainer of pyenv
Signed-off-by: Karl Hepworth <karl.hepworth@gmail.com>

--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -6,6 +6,12 @@
   become_user: "{{ fubarhouse_user }}"
   shell: "{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} commands"
 
+- name: "Python | Run PyEnv / Debug task"
+  become: yes
+  become_user: "{{ fubarhouse_user }}"
+  shell: "cat /home/{{ fubarhouse_user }}/{{ item }}"
+  with_items: "{{ fubarhouse_python.shell_profiles }}"
+
 - name: "Python | Check python versions"
   become: yes
   become_user: "{{ fubarhouse_user }}"
