--- a/tasks/virtualenv.yml
+++ b/tasks/virtualenv.yml
@@ -16,7 +16,7 @@
   become: yes
   become_user: "{{ fubarhouse_user }}"
   lineinfile:
-    dest: "{{ fubarhouse_python.user_dir }}/{{ item.filename }}"
+    dest: "{{ fubarhouse_user_dir }}/{{ item.filename }}"
     regexp: "{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} virtualenv-init -"
     line: "eval \"$({{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} virtualenv-init -)\""
     state: present
