add -lah flags to debug task
Signed-off-by: Karl Hepworth <karl.hepworth@gmail.com>

--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -9,7 +9,7 @@
 - name: "Python | Run PyEnv / Debug task"
   become: yes
   become_user: "{{ fubarhouse_user }}"
-  shell: "ls {{ fubarhouse_user_dir }}/"
+  shell: "ls -lah {{ fubarhouse_user_dir }}/"
 
 - name: "Python | Run PyEnv / Debug task"
   become: yes
