segregate plugins into plugins tasks folders, general cleanup
Signed-off-by: Karl Hepworth <karl.hepworth@gmail.com>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,7 +13,8 @@
 - include: python.yml
   when: fubarhouse_python.install_python
 
-- include: virtualenv.yml
+- include: plugin-updater.yml
+- include: plugin-virtualenv.yml
 
 - include: pypi.yml
   when: fubarhouse_python.install_pypi
