--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -4,18 +4,18 @@
 - name: "Python | Check python versions"
   become: yes
   become_user: "{{ fubarhouse_user }}"
-  shell: "{{ fubarhouse_user_dir }}/{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} versions"
+  shell: "{{ fubarhouse_python.pyenv_symlink_exec }} versions"
   register: installed_python_versions
 
 - name: "Python | Install default version"
   become: yes
   become_user: "{{ fubarhouse_user }}"
-  shell: "{{ fubarhouse_user_dir }}/{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} install {{ python_version }}"
+  shell: "{{ fubarhouse_python.pyenv_symlink_exec }} install {{ python_version }}"
   when: '"{{ python_version }}" not in "{{ python_versions }}" and "{{ python_version }}" not in "{{ installed_python_versions.stdout }}"'
 
 - name: "Python | Install all requested versions"
   become: yes
   become_user: "{{ fubarhouse_user }}"
-  shell: "{{ fubarhouse_user_dir }}/{{ fubarhouse_python.main_dir }}/{{ fubarhouse_python.main_path }}/{{ fubarhouse_python.main_exec }} install {{ item }}"
+  shell: "{{ fubarhouse_python.pyenv_symlink_exec }} install {{ item }}"
   with_items: "{{ python_versions }}"
   when: '"{{ item }}" not in installed_python_versions.stdout'
