--- a/tests/test.yml
+++ b/tests/test.yml
@@ -3,8 +3,7 @@
 - hosts: all
   sudo: true
   vars:
-    fubarhouse_user: root
-    fubarhouse_user_dir: /root
+    fubarhouse_user: travis
     pyenv_clean_install: True
     python_version: 2.7.11
     python_versions:
