--- a/tests/test.yml
+++ b/tests/test.yml
@@ -4,6 +4,7 @@
   sudo: true
   vars:
     fubarhouse_user: travis
+    fubarhouse_user_dir: /home/travis
     pyenv_clean_install: True
     python_version: 2.7.11
     python_versions:
