add travis user, again.
Signed-off-by: Karl Hepworth <karl.hepworth@gmail.com>

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -16,6 +16,11 @@
     virtualenvs:
     - name: Global-2.7.11
       version: 2.7.11
+  pre_tasks:
+  - name: add travis
+    user:
+      name: travis
+      state: present
   roles:
   - geerlingguy.git
   - fubarhouse.curl
