change folder variable reference
Signed-off-by: Karl Hepworth <karl.hepworth@gmail.com>

--- a/vars/config-Darwin.yml
+++ b/vars/config-Darwin.yml
@@ -17,7 +17,7 @@ fubarhouse_python:
   repo_virtualenv: https://github.com/yyuu/pyenv-virtualenv.git
   repo_pyenv_updater: https://github.com/yyuu/pyenv-update.git
   # Install directories
-  main_dir: "/Users/{{ fubarhouse_user }}/.pyenv"
+  main_dir: ".pyenv"
   # Install paths
   main_path: "bin"
   updater_path: "plugins/pyenv-update"
