--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,6 +5,18 @@
   include_vars: "config-{{ ansible_os_family }}.yml"
   when: fubarhouse_python is not defined
 
+- name: debug
+  debug:
+    msg: "{{ fubarhouse_user_dir }}"
+
+- name: debug
+  debug:
+    msg: "{{ fubarhouse_python.main_dir }}"
+
+- name: debug
+  debug:
+    msg: "{{ fubarhouse_user_dir }}/{{ fubarhouse_python.main_dir }}"
+
 - include: "dependencies-{{ ansible_os_family}}.yml"
 
 - include: pyenv.yml
