--- a/tasks/plugin-virtualenv.yml
+++ b/tasks/plugin-virtualenv.yml
@@ -79,5 +79,7 @@
 - name: VirtualEnv | Restart shell
   become: yes
   become_user: "{{ fubarhouse_user }}"
-  shell: |source $HOME/.profile $HOME/.bash_profile"
+  shell: "source {{ fubarhouse_user_dir }}/{{ item.filename }}"
+  with_items: "{{ fubarhouse_python.shell_profiles }}"
+
   when: '"{{ virtualenv }}" not in "{{ virtualenv_current_version.stdout_lines }}"'
