change . to source and prevent failure

--- a/tasks/plugin-virtualenv.yml
+++ b/tasks/plugin-virtualenv.yml
@@ -79,6 +79,7 @@
 - name: VirtualEnv | Restart shell
   become: yes
   become_user: "{{ fubarhouse_user }}"
-  shell: ". {{ fubarhouse_user_dir }}/{{ item.filename }}"
+  shell: "source {{ fubarhouse_user_dir }}/{{ item.filename }}"
   with_items: "{{ fubarhouse_python.shell_profiles }}"
+  failed_when: false
   when: '"{{ virtualenv }}" not in "{{ virtualenv_current_version.stdout_lines }}"'
