--- a/tests/test.yml
+++ b/tests/test.yml
@@ -5,6 +5,7 @@
   vars:
     fubarhouse_user: travis
     fubarhouse_user_dir: /home/travis
+    curl_version: "7.47.0"
     pyenv_clean_install: True
     python_version: 3.5.2
     python_versions:
