--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ env:
   - distro: ubuntu1404
     init: /sbin/init
     run_opts: ""
-  - distro: ubuntu1604
-    init: /lib/systemd/systemd
-    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
+#  - distro: ubuntu1604
+#    init: /lib/systemd/systemd
+#    run_opts: "--privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro"
 
 before_install:
 
